--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+  
+
+    <label for="trial">Enter some text here</label><input id='trial'></input>
+    <button id='check'>Check</button>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
+    <script src="./jsFile.js"></script>
+
   </body>
 </html>
